@@ -1,3 +1,8 @@
+2012-02-26 Sun  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh (CygbuildCmdInstallList): Fix default install
+	destination for scripts. Drop all path names.
+
 2012-02-23 Thu  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/lib/libcheck.sh (CygbuildPerlLibraryList): Include
